--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-test" version="0.9">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="com.memoryabc.plugin.calendar" version="0.9">
   <engines>
     <engine name="cordova" version=">=3.0.0" />
   </engines>
@@ -16,11 +16,11 @@
   
   <platform name="android">
     <config-file target="res/xml/config.xml" parent="/*">
-      <feature name="calendarPlugin">
-        <param name="android-package" value="com.memoryabc.cordovapluginhello" />
+      <feature name="CalendarPlugin">
+        <param name="android-package" value="com.memoryabc.plugin.calendar.CalendarPlugin" />
       </feature>
     </config-file>
-    <source-file src="src/android/CalendarPlugin.java" target-dir="src/com//memoryabc" />
+    <source-file src="src/android/CalendarPlugin.java" target-dir="src/com/memoryabc/plugin/calendar" />
   </platform>
   
 </plugin>
